--- a/app/src/main/res/layout/fragment_import_session.xml
+++ b/app/src/main/res/layout/fragment_import_session.xml
@@ -126,7 +126,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/divider_big"
                             android:layout_marginStart="@dimen/margin_boarder"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="@dimen/margin_medium"
                             android:layout_marginEnd="@dimen/margin_boarder"
                             android:background="@color/secondaryColor"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -217,7 +217,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/divider_big"
                             android:layout_marginStart="@dimen/margin_boarder"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="@dimen/margin_medium"
                             android:layout_marginEnd="@dimen/margin_boarder"
                             android:background="@color/secondaryColor"
                             app:layout_constraintEnd_toEndOf="parent"
