--- a/app/src/main/res/layout/list_item_session.xml
+++ b/app/src/main/res/layout/list_item_session.xml
@@ -102,7 +102,7 @@
                     style="@style/small_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/margin_medium"
                     app:layout_constraintStart_toEndOf="@+id/sessionEndDateTime"
                     app:layout_constraintTop_toTopOf="@+id/sessionEndDateTime"
                     app:sessionSolvesCount="@{session}"
@@ -233,7 +233,7 @@
                     style="@style/small_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/margin_medium"
                     android:text="@string/worstAverageTwelve"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/bestAvg12"
