--- a/app/src/main/res/layout/list_item_session.xml
+++ b/app/src/main/res/layout/list_item_session.xml
@@ -157,8 +157,9 @@
                     style="@style/small_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_big"
                     android:text="@string/worstSolve"
-                    app:layout_constraintStart_toStartOf="@+id/WorstAvg5Header"
+                    app:layout_constraintStart_toEndOf="@+id/bestSolve"
                     app:layout_constraintTop_toTopOf="@+id/bestSolve" />
 
                 <TextView
@@ -197,7 +198,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/worstAverageFive"
-                    app:layout_constraintStart_toStartOf="@+id/worstAvg12Header"
+                    app:layout_constraintStart_toStartOf="@+id/worstSolveHeader"
                     app:layout_constraintTop_toTopOf="@+id/bestAvg5" />
 
                 <TextView
@@ -236,10 +237,9 @@
                     style="@style/small_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_medium"
                     android:text="@string/worstAverageTwelve"
                     app:layout_constraintBottom_toBottomOf="@+id/bestAvg12"
-                    app:layout_constraintStart_toEndOf="@+id/bestAvg12"
+                    app:layout_constraintStart_toStartOf="@+id/WorstAvg5Header"
                     app:layout_constraintTop_toTopOf="@+id/bestAvg12" />
 
                 <TextView
