--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -71,7 +71,7 @@
             app:srcCompat="@drawable/logo" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/appName"
             style="@style/medium_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
             android:text="@string/app_version_header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/appName" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/rateAppButton"
